--- a/app/Resources/views/article/index.html.twig
+++ b/app/Resources/views/article/index.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block titre %}<h1>OKASHI ODOZO</h1>{% endblock %}
+
 {% block body %}
-<h1>OKASHI ODOZO</h1>
+
 <section class="blog mdl-grid" ">
 
   {% for article in articles %}
