--- a/app/Resources/views/article/show.html.twig
+++ b/app/Resources/views/article/show.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
+{% block titre %}<h1>{{ article.titre }}</h1>{% endblock %}
 
 {% block body %}
-<h1>{{ article.titre }}</h1>
+
 <section class="article">
-<div class="block video">{{ article.video }}</div>
+<div class="block video"><iframe width="420" height="315" src="{{ article.video }}" frameborder="0" allowfullscreen></iframe></div>
 
 <div class="block description">{{ article.description }}</div>
 
