--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,46 +2,59 @@
 <html>
 
 <head>
-  <meta charset="UTF-8" />
-  <title>{% block title %}OkashiOdozo: ceremonie du thé {% endblock %}</title>
-  {% block stylesheets %}{% endblock %}
-  <!-- <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" /> -->
-  <link rel="stylesheet" href="{{asset('/css/main.css')}}" charset="utf-8">
-  <link href='https://fonts.googleapis.com/css?family=Work+Sans:100' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
-  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue_grey-light_green.min.css" />
+    <meta charset="UTF-8" />
+    <title>{% block title %}OkashiOdozo: ceremonie du thé {% endblock %}</title>
+    {% block stylesheets %}{% endblock %}
+    <!-- <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" /> -->
+    <link rel="stylesheet" href="{{asset('/css/main.css')}}" charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Work+Sans:100' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue_grey-light_green.min.css" />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
-{% block titre }  {% endblock %}
+    {% block titre %}{% endblock %} {% block body %}{% endblock %} {% block javascripts %}{% endblock %}
 
-  {% block body %}{% endblock %} {% block javascripts %}{% endblock %}
+    <footer class="footer">
+        <div class="block presentation">
+            <p class="catTitle">Hôte</p>
+            <img src="https://scontent.xx.fbcdn.net/v/t1.0-1/p160x160/11071720_10153293967702974_1340823793367243583_n.jpg?oh=e63eb97ed56b67632038f77763370657&oe=57F770E4">
+            <p>Karine, 30 ans, apprend le cha no yu de l'école Urasenke à Marseille depuis 2015, grâce à l'association "Ken to Cha" et Omi sensei.
+            </p>
+        </div>
+        <div class="block commentaire">
 
-  <footer class="footer">
-    <div class="block presentation">
-      <img src="https://scontent.xx.fbcdn.net/v/t1.0-1/p160x160/11071720_10153293967702974_1340823793367243583_n.jpg?oh=e63eb97ed56b67632038f77763370657&oe=57F770E4">
-      <p>Karine, 30 ans, apprend le cha no yu de l'école Urasenke à Marseille depuis 2015, grâce à l'association "Ken to Cha" et Omi sensei.
-      </p>
-    </div>
-    <div class="block commentaire">
+              <p class="catTitle">Commentaires</p>
+            <textarea placeholder="Laisser un commentaire"></textarea>
+        </div>
+        <div class="block categories">
 
-      <!-- <p>Laisser un commentaire</p> -->
-      <textarea placeholder="Laisser un commentaire"></textarea >
-    </div>
-    <div class="block categories">
+            <p class="catTitle">Categories</p>
+            <!-- Flat button with ripple -->
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                Histoire
+            </button>
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                Technique
+            </button>
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                Ustensile
+            </button>
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                Recette
+            </button>
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                Evenement
+            </button>
 
-      <p class="catTitle">Categories</p>
-      <p>Histoire</p>
-      <p>Technique</p>
-      <p>Ustensile</p>
-      <p>recette</p>
-      <p>Evenement</p>
-
-      <input type="text" placeholder="recherche">
-    </div>
-  </footer>
+            <div class="searchBox">
+                <input type="search" class="search" placeholder="Recherche..." /><i class="fa fa-search"></i>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
