--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,99 +1,119 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans:100);
 h1 {
-  font-size: 50px;
-  font-family: 'Work Sans', sans-serif;
-  text-align: center;
-  text-transform: uppercase;
-
+    font-size: 50px;
+    font-family: 'Work Sans', sans-serif;
+    text-align: center;
+    text-transform: uppercase;
 }
-
-
 .blog {
-  text-align: center;
-  margin: auto;
-  width: 80vw;
+    text-align: center;
+    margin: auto;
+    width: 65vw;
 }
-
-
-.carteDown{
-  color:white;
+.carteDown {
+    color: white;
 }
-
-.mdl-cell {
-  box-sizing: border-box;
-  background-size: cover;
-  background-position: center;
-  height: 20vw ;
-  padding-left: 8px;
-  padding-top: 4px;
-  color: white;
+.blog .mdl-cell {
+    box-sizing: border-box;
+    background-size: cover;
+    background-position: center;
+    height: 10vw;
+    width: 10vw;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    padding-left: 8px;
+    padding-top: 4px;
+    color: white;
 }
-
-.blog .mdl-button--accent.mdl-button--accent.mdl-button--raised, .blog  .mdl-button--accent.mdl-button--accent.mdl-button--fab{
-      margin-top: calc(50% - 15px);
-      color: rgba(0, 0, 0, 0.5);
+.blog .mdl-button--accent.mdl-button--accent.mdl-button--raised, .blog .mdl-button--accent.mdl-button--accent.mdl-button--fab {
+    margin-top: calc(50% - 15px);
+    color: rgba(0, 0, 0, 0.5);
 }
-
-.article{
-  text-align: center;
-  margin: auto;
-  width: 80vw;
+.article {
+    text-align: center;
+    margin: auto;
+    width: 80vw;
 }
-
 .article .block {
-  display: inline-block;
-  width: 25vw;
-  height: 25vw;
-  vertical-align: middle;
-  margin: auto;
-
+    display: inline-block;
+    width: 25vw;
+    height: 25vw;
+    vertical-align: middle;
+    margin: auto;
 }
-
 .block.description {
-  text-align: left;
+    text-align: left;
 }
-
-.media img{
-  width: 20vw;
+.media img {
+    width: 20vw;
 }
-
 .article button {
-  display: block;
-  text-align: center;
-  margin: auto;
+    display: block;
+    text-align: center;
+    margin: auto;
 }
-footer{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  background-color: white;
-  height: 20vh;
-  padding: 20px;
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    /*width: 100vw;*/
+    background-color: white;
+    height: 20vh;
+    padding: 20px;
 }
-
 footer .block {
-  width: 30vw;
-  display: inline-block;
-  vertical-align: top;
+    width: 30vw;
+    display: inline-block;
+    vertical-align: top;
 }
-
-/*footer .presentation p {
-  display: inline-block;
-}*/
-
+footer .block.commentaire, footer .block.categories {
+    text-align: center;
+}
 footer .presentation img {
-  float: left;
-  width: 80px;
-  display: inline-block;
-  margin-right: 30px;
+    float: left;
+    width: 80px;
+    display: inline-block;
+    margin-right: 30px;
 }
-
-footer .categories p{
-  display: inline-block;
+footer .catTitle {
+    display: block;
+    text-align: center;
+    margin: auto;
+    display: block;
+    font-size: 20px;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
-
-footer .categories .catTitle{
-  display: block;
-  font-size: 20px;
+footer textarea {
+    width: 20vw;
+}
+footer .search {
+    line-height: 25px;
+    font-size: 15px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding-left: 10px;
+    width: 10vw;
+}
+footer .search:focus {
+    outline: none;
+}
+footer .fa {
+    line-height: 29px;
+    font-size: 15px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding-left: 5px;
+    padding-right: 10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+footer .fa:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: rgb(178, 255, 89);
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
