--- a/web/css/main.css
+++ b/web/css/main.css
@@ -88,6 +88,31 @@ footer .catTitle {
 footer textarea {
     width: 20vw;
 }
+footer div {
+  display: inline-block;
+}
+footer .commentaire #commentaire_name {
+  display:inline-block;
+  width: 9vw;
+  line-height: 25px;
+  font-size: 15px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding-left: 10px;
+}
+
+footer .commentaire #commentaire_email {
+  display:inline-block;
+  width: 9vw;
+  line-height: 25px;
+  font-size: 15px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding-left: 10px;
+}
+
 footer .search {
     line-height: 25px;
     font-size: 15px;
@@ -97,7 +122,7 @@ footer .search {
     padding-left: 10px;
     width: 10vw;
 }
-footer .search:focus {
+footer .search:focus, footer #commentaire_email, footer #commentaire_name {
     outline: none;
 }
 footer .fa {
